tests/neg/syntax_pp_unknown_directive.baa
// RUN: expect-fail
// EXPECT: توجيه غير معروف

#توجيه_غير_معروف شيء

صحيح الرئيسية() {
    إرجع ٠.
}
